--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 .pnp.js
 .yarn/install-state.gz
 
+.idea
+
 # testing
 /coverage
 
@@ -34,3 +36,4 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+/.idea/
